<resources>
    <string name="app_name">Papurrless</string>
    <string name="action_login">Log in</string>
    <string name="action_offline_files">Upload offline files</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title">Title Text</string>
    <string name="description">Description text for you and your friends.</string>
    <string name="favorites_section">FAVORITES</string>
    <string name="all_section">ALL</string>
    <string name="products">2x COCA-COLA LANGE TEKST LANGE TEKST LANGE TEKST TEST\n2x APPELS\n1x DURR\n1x CUTOFF\n2x APPELS\n1x DURR\n1x CUTOFF OOK HEEEEEEEEEEEEL LANGE TEKST\n2x COCA-COLA\n2x APPELS\n1x DURR</string>
    <string name="prices">€2,33\n€3,75\n€11,22\n€13,77</string>
    <string name="totalprice">€100,00</string>
    <string name="prices_rest">€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77\n€2,33\n€3,75\n€11,22\n€13,77</string>
    <string name="products_rest">2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF\n2x COCA-COLA\n2x APPELS\n1x DURR\n1x CUTOFF</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_delete">Delete</string>
    <string name="deleted">REMOVED</string>
    <string name="undo">UNDO</string>
    <string name="search_hint">Appels...</string>
    <string name="search_results">Search Results</string>
    <string name="title_activity_results"> Result</string>
    <string name="premiumEnabled_key">com.example.papurrless.PREMIUMENABLED_KEY</string>
    <string name="premiumEnabled" />
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="join_us">Haven\'t joined us yet?</string>
    <string name="action_register">Register</string>
    <string name="thanks_for_using_papurrless">Thanks for using Papurrless!</string>
    <string name="tagline">Designed to render receipts obsolete</string>
    <string name="read_first">Hold on, read this first :)</string>
    <string name="user_benefits_description">Registered users can upload their receipts to our database to ensure that you won\'t lose your receipts. In the end, it\'s your call though!</string>
    <string name="action_skip_login">Skip login</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="dialog_change_your_mind">Change your mind?</string>
    <string name="action_back">Go back</string>
    <string name="error_login_failed">Login failed..</string>
    <string name="toast_account_created">Account created!</string>
    <string name="error_generic_try_again">Something went wrong, please try again..</string>
    <string name="error_password_no_match">Passwords don\'t match.</string>
    <string name="action_log_out">Log out</string>
    <string name="toast_logged_out">Logged out</string>
    <string name="error_too_many_favorites">Too many favorites, get Premium</string>
    <string name="card_get_premium">Want to see more receipts?\nGet Premium.</string>
    <string name="action_image">Open image</string>
    <string name="action_date">Change date</string>
    <string name="action_supermarket">Change supermarket</string>
    <string name="action_edit_date">Edit date</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">Ok</string>
    <string name="total">Total</string>
    <string-array name="markets_array">
        <item>Not Listed</item>
        <item>AH</item>
        <item>Aldi</item>
        <item>Dirk</item>
        <item>Jumbo</item>
        <item>Lidl</item>
        <item>Makro</item>
        <item>Plus</item>
        <item>Sligro</item>
        <item>Spar</item>
    </string-array>
</resources>
