<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="5dp">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/cardbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/products_scroll"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardbar"
            android:scrollbars="none"
            app:layout_widthPercent="70%">

            <TextView
                android:id="@+id/products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:paddingBottom="0dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/products"
                android:textColor="#222"
                android:textSize="22sp"
                android:textStyle="bold" />

        </HorizontalScrollView>

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/products_rest_scroll"
            android:layout_height="wrap_content"
            android:layout_below="@+id/products_scroll"
            android:scrollbars="none"
            app:layout_widthPercent="70%">

            <TextView
                android:id="@+id/products_rest"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="0dp"
                android:text="@string/products_rest"
                android:textColor="#222"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </HorizontalScrollView>

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/prices_scroll"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardbar"
            android:layout_toRightOf="@+id/products_scroll"
            android:scrollbars="none"
            app:layout_widthPercent="30%">

            <TextView
                android:id="@+id/prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:paddingBottom="0dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/prices"
                android:textColor="#222"
                android:textSize="22sp"
                android:textStyle="bold" />

        </HorizontalScrollView>

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/prices_rest_scroll"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prices_scroll"
            android:layout_toRightOf="@+id/products_rest_scroll"
            android:scrollbars="none"
            app:layout_widthPercent="30%">

            <TextView
                android:id="@+id/prices_rest"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingBottom="48dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="0dp"
                android:text="@string/prices_rest"
                android:textColor="#222"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </HorizontalScrollView>

        <TextView
            android:id="@+id/totalprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/toolbar_bottom"
            android:layout_alignParentRight="true"
            android:background="@drawable/totalprice_background"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/totalprice"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/products_rest_scroll"
            android:minHeight="?android:attr/actionBarSize"
            android:popupTheme="@android:style/ThemeOverlay.Material.Light"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/action_edit"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_mode_edit_24dp"
                android:theme="@style/AppTheme"
                android:title="@string/action_edit" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/action_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:button="@drawable/favorite_state"
                android:theme="@style/AppTheme"
                android:title="@string/action_favorite" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/action_delete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_delete_24dp"
                android:theme="@style/AppTheme"
                android:title="@string/action_delete" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/action_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_photo_24dp"
                android:theme="@style/AppTheme"
                android:title="@string/action_image" />

        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_above="@+id/toolbar_bottom"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/totalprice"
            android:src="@drawable/fading_gradient" />

    </android.support.percent.PercentRelativeLayout>

</android.support.v7.widget.CardView>